--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,45 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2013-01-21 14:01:01 -0500 
+%% Created for Florian Hollenbach at 2013-01-27 19:59:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{EriksonWlezien:1996,
+	Author = {Wlezien, Christopher and Erikson, Robert S. },
+	Date-Added = {2013-01-28 00:58:12 +0000},
+	Date-Modified = {2013-01-28 00:59:08 +0000},
+	Journal = {American Politics Research},
+	Number = {4},
+	Pages = {492-505},
+	Title = {Temporal Horizons and Presidential Election Forecasts},
+	Volume = {24},
+	Year = {1996}}
+
+@article{LewisBeckTien:1996,
+	Author = {Lewis-Beck, Michael S. and Tien, Charles},
+	Date-Added = {2013-01-28 00:55:37 +0000},
+	Date-Modified = {2013-01-28 00:56:52 +0000},
+	Journal = {American Politics Research},
+	Number = {4},
+	Pages = {468--491},
+	Title = {The Future in Forecasting : Prospective Presidential Models},
+	Volume = {24},
+	Year = {1996}}
+
+@article{GneitingEtAl:2007,
+	Author = {Gneiting, Tilmann and Balabdaoui, Fadoua and Raftery, Adrian E.},
+	Date-Added = {2013-01-22 20:43:36 +0000},
+	Date-Modified = {2013-01-22 20:45:24 +0000},
+	Journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	Number = {2},
+	Pages = {243--268},
+	Title = {Probabilistic Forecasts, Calibration and Sharpness},
+	Volume = {69},
+	Year = {2007}}
 
 @article{RingsEtAl:2012,
 	Author = {Rings, Joerg and Vrugt, Jasper A. and Schoups, Gerrit and Huisman, Johan A. and Vereecken, Harry},
